--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "jest": "^29.7.0",
